beautify recommend page

--- a/src/components/Hero.less
+++ b/src/components/Hero.less
@@ -61,9 +61,8 @@
       outline: none;
       border: none;
       cursor: pointer;
-      .txt {
-        margin-left: 10px;
-      }
+      width: 100px;
+      height: 46px;
       &:hover {
         transition: all 0.5s;
         background-color: rgba(255, 255, 255, 0.2);
